# qa-fork-1771443979-poetry_tool_versions

./: .whitesource  autotest_config.json  pyproject.toml
