[tool.poetry]
name = "poetry-tool-versions-critical"
version = "0.1.0"
description = "Critical test: .tool-versions overrides pyproject.toml - Dependencies require Python 3.11+"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# CRITICAL: These package versions have VULNERABILITIES and require Python >=3.9 or >=3.11
numpy = "==1.26.0"
pillow = "==10.0.0"
cryptography = "==41.0.0"
httpx = "==0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
